name = "hmmc"
version = "0.1.0"
description = "A gateware-based Motor Control library build on Migen"
license = "MIT"
authors = [
    "Charles-Henri Mousset <ch.mousset@gmail.com>",
]
repository = "https://github.com/chmousset/python-hmmc"
keywords = ["FPGA", "Gateware", "motor control"]

[tool.poetry]
# ...
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: System :: Hardware"
]
packages = [
    { include = "hmmc" },
]
include = ["hmmc/data"]

[build-system]
requires = ["setuptools ~= 64.0", "cython ~= 0.29.0"]

[tool.poetry.dependencies]
migen = "^0.9.2"

sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.1"
recommonmark = "^0.7.1"
sphinx_autodoc_typehints = "^1.23.0"
sphinxcontrib_wavedrom = "^3.0.4"
sphinxcontrib_svgbob = "^0.2.1"
